OffscreenCanvas fallback, bugfixes and ongoing td development

--- a/style_light.css
+++ b/style_light.css
@@ -54,7 +54,7 @@ a:visited {
 }
 
 .efFlatButtonHighlighted {
-  background-color: #888;
+  background-color: #aaa;
   border: 1px solid black;
   color: #000;
 }
